test/compile_errors/stage1/obj/undeclared_identifier_error_should_mark_fn_as_impure.zig
export fn foo() void {
    test_a_thing();
}
fn test_a_thing() void {
    bad_fn_call();
}

// error
// backend=stage1
// target=native
//
// tmp.zig:5:5: error: use of undeclared identifier 'bad_fn_call'
